# qasync

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  README.rst  appveyor.yml  data.json  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: coverage.yml  main.yml  publish.yml  release.yml  test.yml
asyncqt/: __init__.py  _common.py  _unix.py  _windows.py
examples/: aiohttp_fetch.py  executor_example.py  modal_example.py
examples/qml_httpx/: app.py  service.py
examples/qml_httpx/qml/: Main.qml  Page.qml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1e771e1a584a5f8c___init___py.html  z_1e771e1a584a5f8c__common_py.html  z_1e771e1a584a5f8c__unix_py.html  z_1e771e1a584a5f8c__windows_py.html  z_a44f0ac069e85531_test_environment_py.html  z_a44f0ac069e85531_test_qeventloop_py.html  z_a44f0ac069e85531_test_qthreadexec_py.html  z_a44f0ac069e85531_test_run_py.html
qasync/: __init__.py  _common.py  _unix.py  _windows.py
src/qasync/: __init__.py  _common.py  _unix.py  _windows.py
tests/: conftest.py  test_environment.py  test_qeventloop.py  test_qthreadexec.py  test_run.py
