[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.3,<0.9.0"]

[project]
name = "qasync"
description = "Python library for using asyncio in Qt-based applications"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "Arve Knudsen", email = "arve.knudsen@gmail.com" },
  { name = "Gerard Marull-Paretas", email = "gerard@teslabs.com" },
  { name = "Mark Harviston", email = "mark.harviston@gmail.com" },
  { name = "Alex March", email = "alexmarch@fastmail.com" },
  { name = "Sam McCormack" },
]
maintainers = [{ name = "Alex March", email = "alexmach@fastmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Qt", "asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
version = "0.28.0"

dependencies = []

[project.optional-dependencies]
typing = ["mypy>=1.0"]

[dependency-groups]
dev = [
  "pytest>=8.4; python_version>='3.9'",
  "coverage>=7.10; python_version>='3.9'",

  "pytest==7.4; python_version<'3.9'",
  "coverage==7.6.1; python_version<'3.9'",
]

[project.urls]
Homepage = "https://github.com/CabbageDevelopment/qasync"
Repository = "https://github.com/CabbageDevelopment/qasync"
Releases = "https://github.com/CabbageDevelopment/qasync/releases"
Tracker = "https://github.com/CabbageDevelopment/qasync/issues"

[tool.ruff]
target-version = "py313"

[tool.pyright]
include = ["src", "tests", "examples"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = ["raises"]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
command_line = "--module pytest --verbose tests/"
source = ["src", "tests"]
omit = ["tests/conftest.py"]
